# Election_process

./: .gitignore  README.md  netlify.toml  package-lock.json  render.yaml
Documentations/: 04_Deployment_Process.md  Instructions.md
app/: test_election.db
app/backend/: .env  .env.example  .gitignore  Dockerfile  README.md  ai_service.py  cli_chatbot.py  database.py  debug_auth.py  election_chatbot.db  list_models.py  main.py  migrate_db.py  pyproject.toml  requirements.txt
app/backend/prompts/: system_v1.txt
app/backend/tests/: conftest.py  test_ai_service.py  test_api.py  test_production.py  test_redis.py  test_security.py
app/frontend/: .env.example  .firebaserc  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/frontend/.firebase/: hosting.ZGlzdA.cache
app/frontend/src/: App.jsx  index.css  main.jsx
app/frontend/src/components/: Awareness.jsx  CompareHouses.jsx  ElectionProcess.jsx  Eligibility.jsx  FAQ.jsx  Footer.jsx  Hero.jsx  Introduction.jsx  Navbar.jsx  RegistrationGuide.jsx  TypesOfElections.jsx
app/testing/: __init__.py  test_api.py  test_frontend.py
prompt_base/: 01_prompt.md  02_prompt.md  03_prompt.md  04_prompt.md  05_prompt.md  06_prompt.md  07_prompt.md  08_promp.md  09_prompt.md  10_firestore_migration.md  10_prompt.md  11_prompt.md  12_prompt.md  13_prompt.md  14_prompt.md  15_prompt.md  16_prompt.md  17_prompt.md  18_prompt.md  efficiency_prompt.md  firestore_migration.md  last_prompt.md  scaling_optimization.md
system_design/: deployment_playbook.md  idea.md  summa.md
(+25 files in other folders)
